--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "chart.js": "^2.7.3",
     "lowdb": "^1.0.0",
     "monsterr": "^0.2.3",
+    "survey-jquery": "^1.0.63",
     "vis": "^4.21.0"
   },
   "devDependencies": {
