--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "chart.js": "^2.7.3",
+    "jquery-confirm": "^3.3.3",
     "lowdb": "^1.0.0",
     "monsterr": "^0.2.3",
     "survey-jquery": "^1.0.63",
