--- a/src/stages/game/config/config.json
+++ b/src/stages/game/config/config.json
@@ -6,7 +6,7 @@
     {"name": "Selenium", "depletion_rate": 1},
     {"name": "Tungsten", "depletion_rate": 1}
   ],
-  "sounds": false,
+  "soundVolume": 0,
   "roundLengthInSeconds":  1200,
   "inventoryBonusLimit": 500,
   "inventoryCriticalLimit": 100,
