--- a/src/stages/game/config/config.json
+++ b/src/stages/game/config/config.json
@@ -5,6 +5,7 @@
     {"name": "Tungsten", "depletion_rate": 1}
   ],
   "soundVolume": 0,
+  "shuffleParticipants": true,
   "roundLengthInSeconds":  1200,
   "inventoryBonusLimit": 500,
   "inventoryCriticalLimit": 100,
