--- a/src/stages/game/config/config.json
+++ b/src/stages/game/config/config.json
@@ -25,7 +25,7 @@
         "input": "Palladium",
         "output": "Selenium",
         "gain": 2.0,
-      	"transform_rate": 10
+      	"production_delay": 0
       }]
     },
     {
@@ -39,7 +39,7 @@
         "input": "Selenium",
         "output": "Tungsten",
         "gain": 2.0,
-	      "transform_rate": 10
+	      "production_delay": 0
       }]
     },
     {
@@ -53,7 +53,7 @@
         "input": "Tungsten",
         "output": "Palladium",
         "gain": 2.0,
-	      "transform_rate": 10
+	      "production_delay": 0
       }]
     }
   ]
