--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "vis": "^4.21.0"
   },
   "devDependencies": {
+    "autoprefixer": "^9.6.1",
     "babel-core": "^6.26.3",
     "babel-plugin-transform-html-import-to-string": "0.0.1",
     "eslint": "^4.19.1",
