--- a/src/configurations/game-0_config.json
+++ b/src/configurations/game-0_config.json
@@ -1,14 +1,14 @@
 {
   "materials": [
-    {"name": "Palladium", "depletion_rate": 1},
-    {"name": "Selenium", "depletion_rate": 1},
-    {"name": "Tungsten", "depletion_rate": 1}
+    {"name": "Palladium", "depletion_rate": 0},
+    {"name": "Selenium", "depletion_rate": 0},
+    {"name": "Tungsten", "depletion_rate": 0}
   ],
-  "practiceRun": false,
+  "practiceRun": true,
   "soundVolume": 0,
   "shuffleParticipants": true,
-  "roundLengthInSeconds":  1200,
-  "inventoryBonusLimit": 500,
+  "roundLengthInSeconds":  600,
+  "inventoryBonusLimit": 600,
   "inventoryCriticalLimit": 100,
   "chat": "free",
   "allowDirectMessages": true,
@@ -45,6 +45,48 @@
     },
     {
       "name": "Eastasia Colony",
+      "inventory": [
+        {"name": "Palladium", "amount": 1000},
+        {"name": "Selenium", "amount": 1000},
+        {"name": "Tungsten", "amount": 1000}
+      ],
+      "specializations": [{
+        "input": "Tungsten",
+        "output": "Palladium",
+        "gain": 1.5,
+	      "production_delay": 10
+      }]
+    },
+    {
+      "name": "Africa Colony",
+      "inventory": [
+        {"name": "Palladium", "amount": 1000},
+        {"name": "Selenium", "amount": 1000},
+        {"name": "Tungsten", "amount": 1000}
+      ],
+      "specializations": [{
+        "input": "Palladium",
+        "output": "Selenium",
+        "gain": 1.5,
+      	"production_delay": 10
+      }]
+    },
+    {
+      "name": "South America Colony",
+      "inventory": [
+        {"name": "Palladium", "amount": 1000},
+        {"name": "Selenium", "amount": 1000},
+        {"name": "Tungsten", "amount": 1000}
+      ],
+      "specializations": [{
+        "input": "Selenium",
+        "output": "Tungsten",
+        "gain": 1.5,
+	      "production_delay": 10
+      }]
+    },
+    {
+      "name": "North America Colony",
       "inventory": [
         {"name": "Palladium", "amount": 1000},
         {"name": "Selenium", "amount": 1000},
