--- a/src/configurations/game-0_config.json
+++ b/src/configurations/game-0_config.json
@@ -15,6 +15,7 @@
   "tooltip": ["inventories", "specializations"],
   "trade_delay": 0,
   "productionAmounts": [200, 500, 800],
+  "tradeAmounts": [205, 505, 805],
   "players": [
     {
       "name": "Oceania Colony",
